@@ -5,6 +5,13 @@ if (rootProject.file("local.properties").exists()) {
 
 allprojects {
     project.apply from: rootProject.file('buildconfig/dependencies/dependencies.gradle')
+    // https://github.com/robolectric/robolectric-gradle-plugin/issues/144
+    tasks.withType(Test).configureEach {
+        jvmArgs(["--add-opens=java.base/java.lang=ALL-UNNAMED",
+                 "--add-opens=java.base/java.util=ALL-UNNAMED",
+                 "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"])
+    }
+    tasks.withType(Test) { jvmArgs += "-noverify" }
     repositories {
         maven {
             url = "$rootDir/localMavenRepository"
@@ -38,14 +45,29 @@ allprojects {
             }
         }
         maven {
+            url = uri("https://maven.pkg.github.com/Tokopedia-GoTo/GoTo-Android-Lib")
+
+            credentials {
+                username = properties.getProperty("gpr.usr") ?: System.getenv("GPR_USER")
+                password = properties.getProperty("gpr.key") ?: System.getenv("GPR_API_KEY")
+            }
+        }
+        maven {
+            url = uri("https://maven.pkg.github.com/carousell/lk6-tkpd-android-sdk")
+            credentials {
+                username = properties.getProperty("laku.usr") ?: System.getenv("LAKU_USR")
+                password = properties.getProperty("laku.key") ?: System.getenv("LAKU_API_KEY")
+            }
+        }
+        maven {
             url "https://jitpack.io"
             credentials { username authToken }
         }
         flatDir {
             dirs rootProject.file('aars')
-            dirs rootProject.file('libraries/liveness_lib/libs')
         }
         maven { url 'https://maven-hansel.tokopedia.com/maven' }
+
     }
 }
 
@@ -89,9 +111,11 @@ subprojects {
             dependencySubstitution {
                 force "androidx.appcompat:appcompat:${supportLibraryVersion}"
                 force("org.objenesis:objenesis:2.6")
+                force("net.bytebuddy:byte-buddy:1.12.20")
+                substitute module('androidx.appcompat:appcompat-resources') with module(rootProject.ext.supportLibDependencies.appCompactResource)
                 substitute module('org.jetbrains.kotlin:kotlin-stdlib') with module(rootProject.ext.supportLibDependencies.kotlinSupport)
                 substitute module('org.jetbrains.kotlin:kotlin-stdlib-common') with module("org.jetbrains.kotlin:kotlin-stdlib-common:${kotlinVersion}")
-                substitute module('com.squareup.okio:okio') with module('com.squareup.okio:okio:2.6.0')
+                substitute module('com.squareup.okio:okio') with module('com.squareup.okio:okio:3.4.0')
                 substitute module('com.google.code.findbugs:jsr305') with module('com.google.code.findbugs:jsr305:1.3.9')
                 substitute module('androidx.annotation:annotation') with module("androidx.annotation:annotation:${supportLibraryVersion}")
                 substitute module('androidx.multidex:multidex') with module("androidx.multidex:multidex:${multiDexVersion}")
@@ -101,11 +125,6 @@ subprojects {
                 substitute module('androidx.arch.core:core-common') with module("androidx.arch.core:core-common:${archCoreVersion}")
                 if (project.name != 'wearosapp') {
                     substitute module('androidx.cardview:cardview') with module("androidx.cardview:cardview:${supportLegacyLibraryVersion}")
-                    substitute module('androidx.core:core') with module("androidx.core:core:${androidxCoreVersion}")
-                    substitute module('androidx.lifecycle:lifecycle-runtime') with module("androidx.lifecycle:lifecycle-runtime:${lifeCycleVersion}")
-                    substitute module('androidx.lifecycle:lifecycle-viewmodel') with module("androidx.lifecycle:lifecycle-viewmodel:${lifeCycleVersion}")
-                    substitute module('androidx.lifecycle:lifecycle-livedata-core') with module("androidx.lifecycle:lifecycle-livedata-core:${lifeCycleVersion}")
-                    substitute module('androidx.lifecycle:lifecycle-service') with module("androidx.lifecycle:lifecycle-service:${lifeCycleVersion}")
                 }
                 substitute module('androidx.fragment:fragment') with module("androidx.fragment:fragment:${androidxFragment}")
                 substitute module('com.google.android.material:material') with module("com.google.android.material:material:${materialVersion}")
@@ -114,6 +133,10 @@ subprojects {
                 substitute module('com.google.android.gms:play-services-base') with module("com.google.android.gms:play-services-base:${playServiceBaseVersion}")
                 substitute module('com.google.android.gms:play-services-measurement-base') with module("com.google.android.gms:play-services-measurement-base:${playServiceMeasurementBase}")
                 substitute module('com.google.android.gms:play-services-base') with module("com.google.android.gms:play-services-base:${playServiceBase}")
+                substitute module('com.google.firebase:firebase-config') with module("com.google.firebase:firebase-config:${firebaseRemoteConfigVersion}")
+                substitute module('com.google.firebase:firebase-config-ktx') with module("com.google.firebase:firebase-config-ktx:${firebaseRemoteConfigVersion}")
+                substitute module('com.google.firebase:firebase-perf-ktx') with module("com.google.firebase:firebase-perf-ktx:${firebasePerfVersion}")
+
                 substitute module('androidx.media:media') with module("androidx.media:media:1.3.0")
                 substitute module('org.jetbrains.kotlin:kotlin-reflect') with module("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
                 substitute module('androidx.sqlite:sqlite-framework') with module("androidx.sqlite:sqlite-framework:${sqliteFrameworkVersion}")
@@ -145,6 +168,13 @@ subprojects {
             } else if (isLibrary && !isDF ){
                 task = project.path + ":testDebugUnitTest"
                 rootProject.tasks.runUnitTest.dependsOn(task)
+                if (project.name == "applink") {
+                    android.libraryVariants.all { variant ->
+                        tasks.getByName("test${variant.name.capitalize()}UnitTest") {
+                            dependsOn(rootProject.path + ":readDf")
+                        }
+                    }
+                }
             }
         }
         if (project.tasks.findByName("lint")!= null) {
